<resources>
    <string name="app_name">My Modules</string>
    <string name="C346">C346 Android Programming</string>
    <string name="C203">C203 Web Appln Development in php</string>
    <string name="C206">C206 Software Development Process</string>
    <string name="C218">C218 UI/UX Design for Apps</string>
    <string name="C235">C235 IT Security and Management</string>
    <string name="title">MODULES</string>
    <string name="RTM">Return To Modules</string>

</resources>