<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="@drawable/background"
    android:padding="16dp">

    <TextView
        android:id="@+id/textViewtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:textSize="50dp"
        android:fontFamily="cursive"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:text="@string/title" />

    <TextView
        android:id="@+id/textViewC346"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:fontFamily="cursive"
        android:text="@string/C346"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="25dp"/>

    <TextView
        android:id="@+id/textViewC203"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:textSize="25dp"
        android:fontFamily="cursive"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:text="@string/C203" />

    <TextView
        android:id="@+id/textViewC206"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:textSize="25dp"
        android:fontFamily="cursive"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:text="@string/C206" />

    <TextView
        android:id="@+id/textViewC218"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:textSize="25dp"
        android:fontFamily="cursive"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:text="@string/C218" />

    <TextView
        android:id="@+id/textViewC235"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:textSize="25dp"
        android:fontFamily="cursive"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:text="@string/C235" />

</LinearLayout>